--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,12 +1,12 @@
 body {
     background-color: rgb(44, 39, 39);
-    color: aqua;
+    color: white;
     font-family: cursive;
     text-shadow: 1px 1px rgb(0, 0, 0);
 }
 
 button:hover {
-    color: rgb(61, 232, 255);
+    color: white;
     border-color: rgb(255, 255, 255);
     ;
 }
@@ -28,9 +28,9 @@ button {
     margin: 15px;
     font-size: 25px;
     font-family: sans-serif;
-    border: 1px solid rgb(112, 226, 255);
+    border: 1px solid white;
     background-color: rgb(0, 0, 0);
-    color: aqua;
+    color: white;
 }
 
 h2 {
