--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -34,12 +34,9 @@ button {
 
 h2 {
     font-size: 35px;
-    border-bottom: 2px solid transparent;
-    border-image: linear-gradient(to right,
-            rgb(255, 255, 255),
-            rgb(0, 0, 0));
-    border-image-slice: 1;
-    width: 73%;
+    border-bottom: 2px solid rgb(180, 174, 174);
+    width: 68%;
+    padding-left: 12px;
 
 }
 
