improved the button border colors

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -10,6 +10,7 @@ body {
 button:hover, #copyBtn:hover {
     color: white;
     border-color: rgb(146, 255, 240);
+    transition: all 0.3s;
 }
 
 #passwordId {
