--- a/src/main/resources/static/loginStyle.css
+++ b/src/main/resources/static/loginStyle.css
@@ -1,16 +1,16 @@
-body{
+body {
     background-color: rgb(32, 29, 29);
     color: white;
     text-shadow: 1px 1px black;
 }
 
-h1{
+h1 {
     padding: 0;
     font-size: 55px;
-    
+
 }
 
-.container{
+.container {
     text-align: center;
     background-color: rgb(85, 80, 81);
     height: 700px;
@@ -18,7 +18,7 @@ h1{
     margin: auto;
 }
 
-.form-container{
+.form-container {
     font-size: 50px;
     padding-top: 5px;
     text-align: center;
@@ -26,32 +26,43 @@ h1{
 
 }
 
-input{
+input {
     font-size: 41px;
 }
 
-.form-second-container{
+.form-second-container {
     margin-top: 30%;
 }
 
-.pw-label{
+.pw-label {
     padding-right: 11px;
 }
 
-.login-btn{
+.login-btn {
     font-size: 40px;
     margin-top: 7%;
     margin-left: 65%;
     border-radius: 10%;
     border-style: solid;
-    border-color:rgb(49, 49, 49);
+    border-color: rgb(49, 49, 49);
     background-color: rgb(85, 80, 81);
-    color:rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     text-shadow: none;
     text-shadow: 2px 1px black;
 }
 
-.login-btn:hover{
-    border-color:rgb(3, 3, 3);
-    
+.login-btn:hover,
+.register-btn:hover {
+    border-color: rgb(3, 3, 3);
+}
+
+.register-btn {
+    font-size: 40px;
+    border-radius: 10%;
+    border-style: solid;
+    border-color: rgb(49, 49, 49);
+    background-color: rgb(85, 80, 81);
+    color: rgb(255, 255, 255);
+    text-shadow: none;
+    text-shadow: 2px 1px black;
 }
