fixed a bug, working on one-to-many relationship

--- a/src/main/resources/static/loginStyle.css
+++ b/src/main/resources/static/loginStyle.css
@@ -16,6 +16,7 @@ h1 {
     height: 700px;
     width: 50%;
     margin: auto;
+
 }
 
 .form-container {
@@ -23,6 +24,7 @@ h1 {
     padding-top: 5px;
     text-align: center;
     padding: 10px;
+
 
 }
 
@@ -33,10 +35,11 @@ h1 {
 
 input {
     font-size: 41px;
+    overflow: hidden;
 }
 
 .form-second-container {
-    margin-top: 30%;
+    margin-top: 28%;
 }
 
 .pw-label {
